footer file added

--- a/css/index.css
+++ b/css/index.css
@@ -83,11 +83,12 @@
 
 .team{
    background-color:#141416;
+   
 }
 
 .team .content h2 {
     color: white;
-    margin-top: 30rem;
+    margin-top: 34rem;
     font-family: "Poppins";
     font-size: 4rem;
     margin-bottom: 2.5rem;
@@ -109,12 +110,11 @@
     margin: 0 auto;
     justify-content: center;
     background-color: #1a1a1c;
-    margin: 3rem;
+    padding: 3rem;
 }
 .column{
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    margin: 2rem;
 }
 .column .imageBox {
     box-sizing: border-box;
@@ -198,4 +198,18 @@
     color: #4e4e52;
   }
   
+  .directions {
+    background-color: #141416;
+  
+  }
+  
+  .our-directions {
+    padding-top: 10rem;
+    text-align: center;
+    color: white;
+    font-size: 3rem;
+    font-weight: bold;
+    font-family: "Poppins";
+    line-height: 1;
+  }
  
