--- a/css/index.css
+++ b/css/index.css
@@ -212,4 +212,76 @@
     font-family: "Poppins";
     line-height: 1;
   }
- 
+  
+  .text-cards {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    column-gap: 1rem;
+    margin-left: 29rem;
+    margin-right: 29rem;
+    margin-top: 3rem;
+  }
+  
+  .text-cards img {
+    width: 180px;
+    height: 200px;
+    object-fit: cover;
+  }
+  .text-block-5 {
+    background-color: #83b7ee;
+    width: 180px;
+    height: 200px;
+  }
+  
+  .text-block-6 {
+    background-color: #d4a35a;
+    width: 180px;
+    height: 200px;
+  }
+  
+  .text-block-7 {
+    background-color: #63afbb;
+    width: 180px;
+    height: 200px;
+  }
+  
+  .text-block-5 p {
+    text-align: center;
+    margin-top: 2rem;
+    font-family: "Helvetica";
+    color: white;
+    line-height: 1.6;
+    margin-top: 4.3rem;
+    font-size: 1.2rem;
+    font-weight: bold;
+  }
+  
+  .text-block-6 p {
+    text-align: center;
+    margin-top: 2rem;
+    font-family: "Helvetica";
+    color: white;
+    line-height: 1.6;
+    margin-top: 4.3rem;
+    font-size: 1.2rem;
+    font-weight: bold;
+  }
+  
+  .text-block-7 p {
+    text-align: center;
+    margin-top: 2rem;
+    font-family: "Helvetica";
+    color: white;
+    line-height: 1.6;
+    margin-top: 4.3rem;
+    font-size: 1.2rem;
+    font-weight: bold;
+  }
+  
+  .read-more {
+    color: #898989;
+    font-size: 1rem;
+    font-family: "Open Sans";
+    margin-left: 29rem;
+    margin-top: 1rem;
+  }
