--- a/css/footer.css
+++ b/css/footer.css
@@ -1,6 +1,5 @@
 footer {
     font-family: "Helvetica Neue", sans-serif;
-    background-color: #ffffff;
     color: #ffffff;
     position: relative;
     bottom: 0;
@@ -8,9 +7,8 @@ footer {
     left: 0;
     z-index: 998;
     font-size: 0.8rem;
-    padding: 1rem 1rem;
-    margin-top: 3rem;
-    border-top: 4px solid;
+    padding: 6rem 2rem;
+    margin-top: 15rem;
   }
   
   .footer-wrapper {
@@ -23,4 +21,42 @@ footer {
   .footer-section {
     min-height: auto;
     max-height: none;
+  }
+
+
+
+  .href-buttons button {
+    background-color: #83B7EE;
+    font-family: "Open sans";
+    color: #324156;
+    border: none;
+    padding: 1rem 1.7rem;
+    border-radius: 0.3rem;
+    font-size: 1rem;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+    margin-top: 1.7rem;
+  }
+
+  .href-buttons button:hover {
+    background-color: inherit;
+    color: #ffffff;
+    border-color: white;
+    border-style: solid;
+    border-width: 1px;
+  }
+
+  .href-buttons {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .href-buttons a {
+    margin-bottom: 1rem;
+    text-decoration: none;
+    font-family: "Open sans";
+    color: #808080;
+    font-size: 1.2rem;
+    font-weight: 400;
   }
