--- a/css/index.css
+++ b/css/index.css
@@ -7,8 +7,8 @@
      background: linear-gradient(
         to bottom,
         #1a1a1c 0%,
-        #1a1a1c 60%,
-        #141416 60%,
+        #1a1a1c 40%,
+        #141416 40%,
         #141416 100%
      )
 }
@@ -65,7 +65,6 @@
 }
 
 .background-img {
-    margin-top: 2rem;
     background: url("../img/background.jpeg") fixed 100%;
     background-repeat: no-repeat;
     background-position: center center;
@@ -83,7 +82,8 @@
 
 .team{
    background-color:#141416;
-   
+   margin-left: 2.5rem;
+   margin-right: 2.5rem;
 }
 
 .team .content h2 {
@@ -99,11 +99,11 @@
     font-family: "Poppins";
     font-size: 1rem;
     line-height: 2;
-    font-weight: bold;
+    font-weight: bolder;
 }
 
 .team .content {
-    margin-left: 40rem;
+    margin-left: 30rem;
 }
 .cards {
     display: flex;
@@ -200,7 +200,7 @@
   
   .directions {
     background-color: #141416;
-  
+
   }
   
   .our-directions {
@@ -215,7 +215,7 @@
   
   .text-cards {
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
+    grid-template-columns: repeat(6, 1fr);
     column-gap: 1rem;
     margin-left: 29rem;
     margin-right: 29rem;
