--- a/css/vision.css
+++ b/css/vision.css
@@ -4,113 +4,99 @@
  body {
      margin: 0;
      font-family: "Barlow";
-        background-color: #141416;
+     background-color: #141416;
 }
-
-.header-section {
-   position: relative;
-   display: flex;
+ .header-section {
+     position: relative;
+     display: flex;
 }
-
-.header-panel {
-   width: 100%;
-   overflow: hidden;
+ .header-panel {
+     width: 100%;
+     overflow: hidden;
 }
-
-.header-img {
-   width: 100%;
-   height: 55rem;
-   object-fit: cover;
+ .header-img {
+     width: 100%;
+     height: 55rem;
+     object-fit: cover;
+     transition: "transform 0.5 ease-in" 
 }
-
-.header-title {
-   color: white;
-   position: absolute;
-   z-index: 3;
-   top: 22%; 
-   left: 4%;
-   font-size: 3.7rem; 
-   font-family: "Poppins";
-   font-weight: bolder;
+ .header-title {
+     color: white;
+     position: absolute;
+     z-index: 3;
+     top: 22%;
+     left: 4%;
+     font-size: 3.7rem;
+     font-family: "Poppins";
+     font-weight: bolder;
 }
-
-.header-description {
-   color: white;
-   position: absolute;
-   z-index: 3;
-   top: 28%; 
-   left: 4%;
-   font-size: 1.2rem; 
-   font-family: "Open sans";
+ .header-description {
+     color: white;
+     position: absolute;
+     z-index: 3;
+     top: 28%;
+     left: 4%;
+     font-size: 1.2rem;
+     font-family: "Open sans";
 }
-
-.table-story {
-   position: relative;
-   top: -2%;
-   padding: 0 4.6rem;
-   display: flex;
-   z-index: 2;
-   background-color: inherit;
+ .table-story {
+     position: relative;
+     top: -2%;
+     padding: 0 4.6rem;
+     display: flex;
+     z-index: 2;
+     background-color: inherit;
 }
-
-.table-leadership {
-   position: relative;
-   top: -2%;
-   padding: 0 4.6rem;
-   display: flex;
-   z-index: 2;
-   background-color: inherit;
+ .table-leadership {
+     position: relative;
+     top: -2%;
+     padding: 0 4.6rem;
+     display: flex;
+     z-index: 2;
+     background-color: inherit;
 }
-
-
-.table-row {
-   display: flex;
-   flex-direction: row;
-   align-items: flex-start;
-   background-color: #141416;
-   width: 100%;
+ .table-row {
+     display: flex;
+     flex-direction: row;
+     align-items: flex-start;
+     background-color: #141416;
+     width: 100%;
 }
-
-
-.story-title, .leadership-title {
-   flex: 2.7; 
-   padding: 1.5rem;
-   border: 0.1px solid #3F4349;
-   color: white;
-   height: 40rem;
-   text-align: center;
-   font-family: "Poppins";
-   font-weight: bold;
-   font-size: 2rem;
+ .story-title, .leadership-title {
+     flex: 2.7;
+     padding: 1.5rem;
+     border: 0.1px solid #3F4349;
+     color: white;
+     height: 40rem;
+     text-align: center;
+     font-family: "Poppins";
+     font-weight: bold;
+     font-size: 2rem;
+     transition: "background-position-x ease-in" 
 }
-
-.story-title p, .leadership-title p {
-   margin-top: 35%
+ .story-title p, .leadership-title p {
+     margin-top: 35% 
 }
-
-.story-desc p, .leadership-desc p {
-   margin-top: 10%;
-   margin-left: 30%;
+ .story-desc p, .leadership-desc p {
+     margin-top: 10%;
+     margin-left: 30%;
 }
-
-.story-title {
-   background-image: url("../img/vision-story-img.webp");
-   background-size: repeat;
+ .story-title {
+     background-image: url("../img/vision-story-img.webp");
+     background-size: repeat;
 }
-
-.leadership-title {
-   background-image: url("../img/vision-lead-img.webp");
-   background-size: repeat;
+ .leadership-title {
+     background-image: url("../img/vision-lead-img.webp");
+     background-size: repeat;
 }
-
-.story-desc, .leadership-desc {
-   flex: 4;
-   padding: 1.5rem;
-   border: 0.1px solid #3F4349;
-   color: #808080;
-   height: 40rem;
-   text-align: left;
-   font-family: "Open Sans";
-   font-size: 1rem;
-   line-height: 1.8;
+ .story-desc, .leadership-desc {
+     flex: 4;
+     padding: 1.5rem;
+     border: 0.1px solid #3F4349;
+     color: #808080;
+     height: 40rem;
+     text-align: left;
+     font-family: "Open Sans";
+     font-size: 1rem;
+     line-height: 1.8;
 }
