--- a/css/solutions.css
+++ b/css/solutions.css
@@ -2,8 +2,16 @@
  @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap');
  @import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@200&display=swap');
  body {
-     background-color: #141416;
+    margin: 0;
+    font-family: "Barlow";
+    background-color: #141416;
 }
+
+.page-wrapper {
+    opacity: 0;
+    transition: opacity 0.8s ease-in-out; 
+  }
+
  .business {
      background-image: url(../img/solutions-background.png);
      background-size: cover;
