--- a/css/solutions.css
+++ b/css/solutions.css
@@ -18,7 +18,7 @@
      padding: 3rem 1.25px;
 }
 
- .business h2{
+ .business h2 {
      color: white;
      margin-top: 8rem;
      margin-left: 4rem;
@@ -41,7 +41,8 @@
      border-radius: 15px;
      padding: 1.5rem;
      width: 30%;
-     margin-left: 35% 
+     margin-left: 35%;
+     opacity: 0;
 }
 
  .data-management img, .support img {
@@ -59,6 +60,7 @@
      margin-left: 4rem;
      margin-top: 3rem;
      font-size: 1.3rem;
+     opacity: 0;
 }
 
  .software-description p, .data-management p, .custom-app p, .support p {
@@ -66,6 +68,7 @@
      margin-left: 4rem;
      margin-bottom: 4rem;
      color: #8A8A8A;
+     opacity: 0;
 }
 
  .software-description td {
