--- a/css/footer.css
+++ b/css/footer.css
@@ -10,22 +10,28 @@ footer {
   padding: 7rem 2rem;
   background-color: #141416;
 }
+
 .footer-wrapper {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: auto 1px auto;
   grid-gap: 1rem;
 }
+
 .footer-section {
   min-height: auto;
   max-height: none;
+  display: flex;
+  flex-direction: column;
 }
+
 #buttons {
   margin-left: 11rem;
 }
 #social {
   margin-left: 13rem;
 }
+
 .href-buttons button {
   background-color: #83B7EE;
   font-family: "Open sans";
@@ -38,6 +44,7 @@ footer {
   transition: all 0.3s ease-in-out;
   margin-top: 1.7rem;
 }
+
 .href-buttons button:hover {
   background-color: inherit;
   color: #ffffff;
@@ -45,11 +52,13 @@ footer {
   border-style: solid;
   border-width: 1px;
 }
+
 .href-buttons {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
 }
+
 .href-buttons a {
   margin-bottom: 1rem;
   text-decoration: none;
@@ -58,6 +67,7 @@ footer {
   font-size: 1.2rem;
   font-weight: 400;
 }
+
 .footer-section .company-name {
   font-family: "Barlow";
   font-size: 1.6rem;
@@ -66,6 +76,7 @@ footer {
   color: #ffffff;
   cursor: pointer;
 }
+
 .footer-section .company-description {
   font-family: "Open Sans";
   color: #808080;
@@ -75,6 +86,7 @@ footer {
   font-size: 1.1rem;
   color: #808080;
 }
+
 .footer-section i {
   font-size: 1.5rem;
   color: #808080;
@@ -90,4 +102,13 @@ footer {
 .footer-section .footer-logo {
   width: 12%;
   height: auto;
+}
+
+.footer-info {
+  margin-top: 9rem; 
+}
+
+.social-icons {
+  display: flex;
+  gap: 0.3rem;
 }
