--- a/css/vision.css
+++ b/css/vision.css
@@ -22,7 +22,8 @@
      width: 100%;
      height: 55rem;
      object-fit: cover;
-     transition: "transform 0.5 ease-in" 
+     transition: "transform 0.5 ease-in";
+     pointer-events: none;
 }
  .header-title, .header-description {
      color: white;
