--- a/css/header.css
+++ b/css/header.css
@@ -52,11 +52,10 @@
      text-decoration: none;
      color: #8a8a98;
      opacity: 1;
-     transition: 0.3s;
+     transition: all 0.4s ease-in-out;
 }
  .subpage-item:hover{
      color: #729fce;
-     transition: color 0.4s ease-out;
      transform: inherit;
      opacity: 1;
      text-decoration: none;
@@ -67,25 +66,26 @@
  .subpage-item:last-child {
      margin-right: 0.625rem;
 }
+
  .header-button {
      margin-right: 0.625rem;
      background: transparent;
      border-radius: 0.3rem;
-     border-color: rgb(255, 255, 255);
+     border-color: white;
      color: white;
-     size: 1.25rem;
-     padding: 0.5em 1.5em;
+     padding: 0.7em 1.5em;
      position: relative;
-     font-family: "Barlow";
-     font-weight: bold;
+     font-family: "Open Sans";
      font-size: 0.90rem;
      cursor: pointer;
      opacity: 0.6;
-     transition: 0.3s;
-}
+     transition: all 0.3s ease-in-out;
+    }
+
  .header-button:hover{
      background-color: #d4a35a;
      color: black;
      opacity: 1;
+     border: transparent;
 }
  
