--- a/css/contact-us.css
+++ b/css/contact-us.css
@@ -34,7 +34,7 @@
 }
 table, td, tr {
     margin-top: 0.3rem;
-    margin-left: 6rem;
+    margin-left: 8rem;
     border-color: rgb(255, 255, 255);
     border: 1px solid;
     height: 10rem;
@@ -47,10 +47,14 @@ table, td, tr {
 .software p {
     font-family: "Open Sans";
     color: #8a8a8a;
-    font-size: 0.8rem;
+    font-size: 1rem;
     margin-top: 7rem;
     margin-bottom: 7rem;
-    margin-left: 5rem;
+    margin-left: 9rem;
+}
+
+form {
+    margin-left: 10rem;
 }
 
 form label {
