--- a/css/footer.css
+++ b/css/footer.css
@@ -100,7 +100,7 @@ footer {
   font-weight: 500;
 }
 .footer-section .footer-logo {
-  width: 12%;
+  width: 3rem;
   height: auto;
 }
 
@@ -111,4 +111,57 @@ footer {
 .social-icons {
   display: flex;
   gap: 0.3rem;
+}
+
+@media screen and (max-width: 1000px) {
+  footer {
+    padding: 7rem 1rem;
+  }
+  .footer-wrapper {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: auto 10px auto;
+  }
+  .footer-info {
+    margin-top: 1.2rem;
+    justify-content: center;
+    align-items: center;
+  }
+  .footer-section {
+    margin-bottom: 2rem;
+  }
+  .footer-section .company-name {
+    font-size: 1.4rem;
+  }
+  .footer-section .company-description {
+    font-size: 1rem;
+  }
+  .footer-section p {
+    font-size: 1rem;
+  }
+  .footer-section i {
+    font-size: 1.2rem;
+  }
+  .footer-section span {
+    font-size: 0.8rem;
+  }
+  .footer-section .footer-logo {
+    width: 3rem;
+  }
+  .href-buttons {
+    margin-left: auto;
+    margin-right: auto;
+    }
+  
+  .href-buttons button {
+    padding: 0.8rem 1.5rem;
+    font-size: 0.9rem;
+  }
+
+  #buttons {
+    margin-left: 0;
+  }
+  #social {
+    margin-left: auto;
+    margin-right: auto;
+    }
 }
