--- a/css/header.css
+++ b/css/header.css
@@ -17,6 +17,44 @@
      z-index: 9999;
      transition: opacity 0.5s ease-in-out;
 }
+ .hamburger {
+     display: none;
+     flex-direction: column;
+     cursor: pointer;
+     z-index: 10000;
+}
+ .hamburger.open .bar:nth-child(1) {
+     transform: translateY(8px) rotate(-45deg);
+}
+ .hamburger.open .bar:nth-child(2) {
+     opacity: 0;
+}
+ .hamburger.open .bar:nth-child(3) {
+     transform: translateY(-6px) rotate(45deg);
+}
+ .bar {
+     width: 2rem;
+     height: 0.2rem;
+     background-color: white;
+     margin: 2px 2rem;
+     transition: 0.4s;
+}
+ .panel {
+     position: fixed;
+     top: 0;
+     right: -25rem;
+     width: 25rem;
+     height: 100%;
+     background-color: rgb(20, 20, 22);
+     color: white;
+     transition: right 1s;
+     z-index: 9998;
+     overflow-y: auto;
+     display: none;
+}
+ .panel.open {
+     right: 0;
+}
  .company-name {
      font-weight: bold;
 }
@@ -34,9 +72,9 @@
  .company-name {
      font-size: 1.5rem;
      cursor: default;
-     user-select: none; 
-    -webkit-user-select: none;
-    -moz-user-select: none;
+     user-select: none;
+     -webkit-user-select: none;
+     -moz-user-select: none;
 }
  .subpages {
      display: flex;
@@ -63,10 +101,6 @@
  .subpage-item:active{
      color:#729fce;
 }
- .subpage-item:last-child {
-     margin-right: 0.625rem;
-}
-
  .header-button {
      margin-right: 0.625rem;
      background: transparent;
@@ -80,12 +114,98 @@
      cursor: pointer;
      opacity: 0.6;
      transition: all 0.3s ease-in-out;
-    }
-
+}
  .header-button:hover{
      background-color: #d4a35a;
      color: black;
      opacity: 1;
      border: transparent;
 }
- 
+ @media screen and (max-width: 1000px) {
+     .header {
+         padding: 1.25rem 0.625rem;
+    }
+     .hamburger {
+         display: flex;
+    }
+     .subpages {
+         display: none;
+    }
+     .header-button {
+         display: none;
+    }
+     .panel {
+         display: flex;
+         top: 5.2rem;
+    }
+     .mobile-subpages {
+         display: flex;
+         flex-direction: column;
+         position: absolute;
+         right: 0;
+         width: 100%;
+         height: 100%;
+         background-color: rgb(20, 20, 22);
+         color: white;
+         transition: right 0.4s;
+         z-index: 9998;
+         overflow-y: auto;
+    }
+     .subpage-item {
+         font-family: "Open Sans";
+         font-size: 1.5rem;
+         text-decoration: none;
+         color: #8a8a98;
+         opacity: 1;
+         transition: all 0.4s ease-in-out;
+         font-weight: bold;
+         text-transform: uppercase;
+         align-items: center;
+         text-align: center;
+         margin-left: 1rem;
+         margin-bottom: 0.8rem;
+         letter-spacing: 0.3rem;
+    }
+     .subpage-item:hover{
+         color: #729fce;
+         transform: inherit;
+         opacity: 1;
+         text-decoration: none;
+    }
+     .subpage-item:active{
+         color:#729fce;
+    }
+     .mobile-header-button {
+         margin-right: 0.625rem;
+         background: transparent;
+         border-radius: 0.3rem;
+         border-color: white;
+         color: white;
+         padding: 0.7em 4em;
+         position: relative;
+         font-family: "Open Sans";
+         font-size: 1rem;
+         cursor: pointer;
+         opacity: 0.6;
+         transition: all 0.3s ease-in-out;
+         margin-left: 6.2rem;
+         margin-top: 2rem;
+         margin-bottom: 2rem;
+    }
+     .mobile-header-button:hover{
+         background-color: #d4a35a;
+         color: black;
+         opacity: 1;
+         border: transparent;
+    }
+     .divider {
+         content: "";
+         display: block;
+         width: 95%;
+         height: 1px;
+         background-color: #8a8a98;
+         margin: auto;
+         margin-bottom: 2rem;
+         margin-top: 0.5rem;
+    }
+}
