--- a/css/index.css
+++ b/css/index.css
@@ -61,6 +61,7 @@
      line-height: 1;
      font-family: "Poppins";
 }
+
  .background-img {
      background: url("../img/background.jpeg") fixed 100%;
      background-repeat: no-repeat;
@@ -222,4 +223,126 @@
 .text-block-5:hover, .text-cards img:hover, .text-block-6:hover, .text-block-7:hover {
      transform: scale(1.1);
 }
+
+
+@media screen and (max-width: 1000px) {
+
+     body {
+          background: linear-gradient( to bottom, #1a1a1c 0%, #1a1a1c 25%, #141416 25%, #141416 100% );
+     }
+
+     .welcome {
+         width: 100%;
+         height: 100%;
+         margin-top: 5.2rem;
+         margin-left: 0;
+         margin-right: 0;
+         margin-bottom: 0;
+         display: flex;
+         flex-direction: column;
+         justify-content: center;
+         align-items: center;
+     }
+
+     .welcome div {
+          width: 90%;
+     }
+
+     .about {
+         width: 100%;
+         height: 100%;
+         position: absolute;
+         top: 8rem;
+         left: 1.5rem;
+         background-color: #fafafa;
+         background-size: cover;
+     }
+
+     .about h2 {
+           font-size: 3rem;
+           margin: 2.5rem auto;
+           text-align: center;
+     }
+
+     .about p {
+           font-size: 3vw;
+           margin: 0 2rem;
+     }
+
+     .short-desc {
+          margin-top: 15rem;
+          font-size: 1.8rem;
+          color: white;
+          text-align: center;
+          font-weight: bold;
+          padding: 5%;
+          justify-content: center;
+          align-items: center;
+          line-height: 1;
+          font-family: "Poppins";
+     }
+  
+      .team .content h2 {
+          margin-top: 22rem;
+          font-size: 1.8rem;
+      }
+  
+      .text-cards {
+          grid-template-columns: repeat(3, 1fr);
+          column-gap: 0.5rem;
+          margin-left: 1.5rem;
+          margin-right: 1.5rem;
+          margin-top: 2rem;
+      }
+  
+      .text-cards img {
+          width: 100%;
+          height: 2rem;
+      }
+  
+      .text-block-5,
+      .text-block-6,
+      .text-block-7 {
+          width: 100%;
+          height: 2rem;
+      }
+  
+      .text-block-5 p,
+      .text-block-6 p,
+      .text-block-7 p {
+          margin-top: 1rem;
+          font-size: 1rem;
+      }
+  
+      .read-more {
+          margin-left: 1.5rem;
+          margin-top: 0.5rem;
+      }
+  
+      .text-block-5,
+      .text-block-6,
+      .text-block-7,
+      .text-cards img {
+          transition: transform 0.3s ease-in-out;
+      }
+  
+      .text-block-5:hover,
+      .text-block-6:hover,
+      .text-block-7:hover,
+      .text-cards img:hover {
+          transform: scale(1.03);
+      }
+  
+      .team .content {
+          margin-left: 2.5rem;
+          margin-right: 2.5rem;
+      }
+  
+      .column .imageBox {
+          margin-left: 1.5rem;
+      }
+
+
+   }
+   
  
